Added kaniko stage

--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -23,6 +23,16 @@ spec:
           name: docker-sock
         - mountPath: /tmp/trivycache/
           name: trivycache
+    - name: kaniko
+      image: gcr.io/kaniko-project/executor:v1.6.0-debug
+      imagePullPolicy: Always
+      command:
+        - sleep
+      args:
+        - 99d
+      volumeMounts:
+        - name: jenkins-docker-cfg
+          mountPath: /kaniko/.docker
     - name: trufflehog
       image: rmkanda/trufflehog
       command:
@@ -43,3 +53,11 @@ spec:
     - name: trivycache
       hostPath:
         path: /tmp/trivycache/
+    - name: jenkins-docker-cfg
+      projected:
+        sources:
+        - secret:
+          name: regcred
+          items:
+            - key: .dockerconfigjson
+              path: config.json
