--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -24,15 +24,18 @@ spec:
         - mountPath: /tmp/trivycache/
           name: trivycache
     - name: kaniko
-      image: gcr.io/kaniko-project/executor:v1.6.0-debug
+      image: gcr.io/kaniko-project/executor:debug
       imagePullPolicy: Always
       command:
         - sleep
       args:
         - 99d
       volumeMounts:
-        - name: jenkins-docker-cfg
-          mountPath: /kaniko/.docker
+        - name: kaniko-secret
+          mountPath: /secret
+      env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /secret/kaniko-secret.json
     - name: trufflehog
       image: rmkanda/trufflehog
       command:
@@ -53,11 +56,7 @@ spec:
     - name: trivycache
       hostPath:
         path: /tmp/trivycache/
-    - name: jenkins-docker-cfg
-      projected:
-        sources:
-        - secret:
-          name: regcred
-          items:
-            - key: .dockerconfigjson
-              path: config.json
+    - name: kaniko-secret
+      secret:
+        name: kaniko-secret
+
