--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -24,7 +24,7 @@ spec:
         - mountPath: /tmp/trivycache/
           name: trivycache
     - name: kaniko
-      image: gcr.io/kaniko-project/executor:latest
+      image: gcr.io/kaniko-project/executor:v1.6.0-debug
       imagePullPolicy: Always
       command:
         - sleep
