--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -23,19 +23,19 @@ spec:
           name: docker-sock
         - mountPath: /tmp/trivycache/
           name: trivycache
-    - name: kaniko
-      image: gcr.io/kaniko-project/executor:v1.6.0-debug
-      imagePullPolicy: Always
-      command:
-        - sleep
-      args:
-        - 99d
-      volumeMounts:
-        - name: kaniko-secret
-          mountPath: /secret
-      env:
-        - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /secret/kaniko-secret.json
+    # - name: kaniko
+    #   image: gcr.io/kaniko-project/executor:v1.6.0-debug
+    #   imagePullPolicy: Always
+    #   command:
+    #     - sleep
+    #   args:
+    #     - 99d
+    #   volumeMounts:
+    #     - name: kaniko-secret
+    #       mountPath: /secret
+    #   env:
+    #     - name: GOOGLE_APPLICATION_CREDENTIALS
+    #       value: /secret/kaniko-secret.json
     - name: trufflehog
       image: rmkanda/trufflehog
       command:
@@ -56,7 +56,7 @@ spec:
     - name: trivycache
       hostPath:
         path: /tmp/trivycache/
-    - name: kaniko-secret
-      secret:
-        name: kaniko-secret
+    # - name: kaniko-secret
+    #   secret:
+    #     name: kaniko-secret
 
